2004-10-11  Nate Nielsen <nielsen@memberwebs.com>

	* libseahorse/seahorse-vfs-data.c: Truncate files when writing out	
	* bonobo/seahorse-pgp-file-listener.c:
	* libseahorse/seahorse-op.c: 
	* libseahorse/seahorse-op.h:
	* src/main.c: Removed decrypt/verify option (bug# 112357)
	* libseahorse/seahorse-signatures.c: No crashing when an invalid 
	signature is passed
	
2004-10-09  Nate Nielsen <nielsen@memberwebs.com>

	* libseahorse/seahorse-op.c:
	* src/main.c: seahorse_op_* shouldn't free recips, they're now freed
	by the caller.
	* libseahorse/Makefile.am: 
	* libseahorse/seahorse-op.c:
	* libseahorse/seahorse-util.c:
	* libseahorse/seahorse-util.h:
	* libseahorse/seahorse-vfs-data.c:
	* libseahorse/seahorse-vfs-data.h: 
	* configure.in: Added support for gnome-vfs
	* bonobo/Seahorse_PGP_File_Listener.server.in: Allow use of remote URIs
	* src/seahorse-export.c:
	* src/seahorse-export.glade:
	* src/seahorse-import.c:
	* src/seahorse-import.glade: Removed
	* src/Makefile.am:
	* src/seahorse-windows.h:
	* src/seahorse-key-manager.c:
	* src/seahorse-key-manager.glade: Reworked import/export options, 
	copy/paste, drag and drop, new file chooser (bug# 140987)	
			
2004-10-08  Nate Nielsen <nielsen@memberwebs.com>
	
	* libseahorse/seahorse-context.c: 
	* libseahorse/seahorse-recipients.c:
	* src/main.c: Use of ngettext (bug# 123850)
	* plugins/nautilus/seahorse-pgp-preferences.desktop.in: Fixed icon 
	(bug# 132687)
	* libseahorse/seahorse-context.c: Fixed crasher when eel gconf returns 
	a null value (see comments on bug# 147076)
	* libseahorse/seahorse-op.c: Fixed crasher when the clipboard sends
	us null text (bug# 114459)
	
2004-10-06  Nate Nielsen <nielsen@memberwebs.com>
	
	* libseahorse/seahorse-op.c:
	* libseahorse/seahorse-recipients.c: Fixed crasher bugs which occur after
	encrypting a file (bug# 154747)
	* libseahorse/seahorse-check-button-control.c:
	* libseahorse/seahorse-context.c:
	* libseahorse/seahorse-context.h: