@@ -23,6 +23,9 @@
 #include <time.h>
 #include <stdio.h>
 
+#include <gnome.h>
+#include <libgnomevfs/gnome-vfs.h>
+
 #include "seahorse-util.h"
 #include "seahorse-key.h"
 #include "seahorse-vfs-data.h"
@@ -192,6 +195,249 @@ seahorse_util_write_data_to_text (gpgme_data_t data)
 	g_string_free (string, FALSE);
 	
 	return text;
+}
+
+/** 
+ * seahorse_util_uri_get_last:
+ * @uri: The uri to parse
+ *
+ * Finds the last portion of @uri. Note that this does
+ * not modify @uri. If the uri is invalid or has no 
+ * directories then the entire thing is returned.
+ *
+ * Returns: Last portion of @uri
+ **/
+const gchar* 
+seahorse_util_uri_get_last (const gchar* uri)
+{
+    const gchar* t;
+    
+    t = uri + strlen (uri);
+    
+    if (t == uri)
+        return uri;
+        
+    if (*(t - 1) == '/')
+        t--;
+    
+    while (*(t - 1) != '/')
+        t--;
+    
+    return t;
+}    
+
+/**
+ * seahorse_util_uri_split_last
+ * @uri: The uri to split
+ * 
+ * Splits the uri in two at it's last component. The result
+ * is still part of the same string, so don't free it. This 
+ * modifies the @uri argument.
+ * 
+ * Returns: The last component
+ **/
+const gchar* 
+seahorse_util_uri_split_last (gchar* uri)
+{
+    gchar* t;
+    
+    t = (gchar*)seahorse_util_uri_get_last (uri);
+    if(t != uri)
+        *(t - 1) = 0;
+        
+    return t;
+}
+
+/**
+ * seahurse_util_uri_exists
+ * @uri: The uri to check
+ * 
+ * Verify whether a given uri exists or not.
+ * 
+ * Returns: Whether it exists or not.
+ **/
+gboolean
+seahorse_util_uri_exists (const gchar* uri)
+{
+    GnomeVFSURI* vuri;    
+    gboolean exists;
+
+    vuri = gnome_vfs_uri_new (uri);
+    g_return_val_if_fail (vuri != NULL, FALSE);
+    
+    exists = gnome_vfs_uri_exists (vuri);
+    gnome_vfs_uri_unref (vuri);
+    
+    return exists;
+}       
+    
+/**
+ * seahorse_util_uri_unique
+ * @uri: The uri to guarantee is unique
+ * 
+ * Creates a URI based on @uri that does not exist.
+ * A simple numbering scheme is used to create new
+ * URIs. Not meant for temp file creation.
+ * 
+ * Returns: Newly allocated unique URI.
+ **/
+gchar*
+seahorse_util_uri_unique (const gchar* uri)
+{
+    gchar* suffix;
+    gchar* prefix;
+    gchar* uri_try;
+    gchar* x;
+    guint len;
+    int i;
+    
+    /* Simple when doesn't exist */
+    if (!seahorse_util_uri_exists (uri))
+        return g_strdup (uri);
+    
+    prefix = g_strdup (uri);
+    len = strlen (prefix); 
+    
+    /* Always take off a slash at end */
+    g_return_val_if_fail (len > 1, g_strdup (uri));
+    if (prefix[len - 1] == '/')
+        prefix[len - 1] = 0;
+            
+    /* Split into prefix and suffix */
+    suffix = strrchr (prefix, '.');
+    x = strrchr(uri, '/');
+    if (suffix == NULL || (x != NULL && suffix < x)) {
+        suffix = g_strdup ("");
+    } else {
+        x = suffix;
+        suffix = g_strdup (suffix);
+        *x = 0;
+    }                
+        
+    for (i = 1; i < 1000; i++) {
+       
+        uri_try = g_strdup_printf ("%s-%d%s", prefix, i, suffix);
+       
+        if (!seahorse_util_uri_exists (uri_try))
+            break;
+        
+        g_free (uri_try);
+        uri_try = NULL;
+    }
+        
+    g_free (suffix);    
+    g_free (prefix);
+    return uri_try ? uri_try : g_strdup (uri);       
+}
+
+/**
+ * seahorse_util_uri_replace_ext
+ * @uri: The uri with old extension
+ * @ext: The new extension
+ * 
+ * Replaces the extension on @uri
+ * 
+ * Returns: Newly allocated URI string with new extension.
+ **/
+gchar* 
+seahorse_util_uri_replace_ext (const gchar *uri, const gchar *ext)
+{
+    gchar* ret;
+    gchar* dot;
+    gchar* slash;
+    guint len;
+    
+    len = strlen (uri);
+    ret = g_new0 (gchar, len + strlen(ext) + 16);
+    strcpy (ret, uri);
+ 
+    /* Always take off a slash at end */
+    g_return_val_if_fail (len > 1, ret);
+    if (ret[len - 1] == '/')
+        ret[len - 1] = 0;
+        
+    dot = strrchr (ret, '.');
+    if (dot != NULL) {
+        slash = strrchr (ret, '/');
+        if (slash == NULL || dot > slash)
+            *dot = 0;
+    }
+ 
+    strcat (ret, ".");
+    strcat (ret, ext);
+    return ret;    
+}
+
+/* Context for callback below */
+typedef struct _VisitUriCtx
+{
+    GArray* files;
+    const gchar* base_uri;
+}
+VisitUriCtx;
+
+/* Called for each sub file or directory */
+static gboolean
+visit_uri (const gchar *rel_path, GnomeVFSFileInfo *info, gboolean recursing_will_loop,
+                gpointer data, gboolean *recurse)
+{
+    VisitUriCtx* ctx = (VisitUriCtx*)data;
+    gchar* t = g_strconcat (ctx->base_uri, "/", rel_path, NULL);
+    gchar* uri = gnome_vfs_make_uri_canonical (t);
+    g_free (t);
+
+    if(info->type != GNOME_VFS_FILE_TYPE_DIRECTORY)
+        g_array_append_val (ctx->files, uri);
+
+    *recurse = !recursing_will_loop;
+    return TRUE;
+}
+
+/**
+ * seahorse_util_uris_expand
+ * @uris: The null-terminated vector of URIs to enumerate
+ * 
+ * Find all files in the given set of uris.                                         
+ * 
+ * Returns: Newly allocated null-terminated string vector of URIs.
+ */
+gchar** 
+seahorse_util_uris_expand (const gchar** uris)
+{
+    GnomeVFSFileInfo* info;
+    GArray* files  = NULL;
+    const gchar** u;
+    gchar* uri;
+
+    files = g_array_new (TRUE, FALSE, sizeof(gchar*));    
+    info = gnome_vfs_file_info_new ();
+    
+    for(u = uris; *u; u++) {
+
+        uri = gnome_vfs_make_uri_canonical (*u);
+
+        if (gnome_vfs_get_file_info (uri, info, GNOME_VFS_FILE_INFO_DEFAULT) == GNOME_VFS_OK &&
+            info->type == GNOME_VFS_FILE_TYPE_DIRECTORY) 
+        {
+                VisitUriCtx ctx;
+                ctx.files = files;
+                ctx.base_uri = uri;
+                
+                gnome_vfs_directory_visit (uri, GNOME_VFS_FILE_INFO_DEFAULT, 
+                    GNOME_VFS_DIRECTORY_VISIT_DEFAULT | GNOME_VFS_DIRECTORY_VISIT_LOOPCHECK,
+                    visit_uri, &ctx);
+               
+        /* Not a directory */     
+        } else {
+           
+            g_array_append_val (files, uri);
+            uri = NULL; /* To prevent freeing below */
+        }
+        
+        g_free (uri);
+    }            
+    
+    return (gchar**)g_array_free (files, FALSE);            
 }
 
 /**
