@@ -41,6 +41,19 @@ gpgme_error_t	seahorse_util_write_data_to_file	(const gchar		*path,
 
 gchar*		seahorse_util_write_data_to_text	(gpgme_data_t		data);
 
+gboolean    seahorse_util_uri_exists        (const gchar* uri);
+
+gchar*      seahorse_util_uri_unique        (const gchar* uri);
+
+gchar*      seahorse_util_uri_replace_ext   (const gchar *uri, 
+                                             const gchar *ext);
+
+const gchar* seahorse_util_uri_get_last     (const gchar* uri);
+
+const gchar* seahorse_util_uri_split_last   (gchar* uri);
+
+gchar**     seahorse_util_uris_expand       (const gchar **uris);
+
 gboolean	seahorse_util_check_suffix		(const gchar		*path,
 							 SeahorseSuffix		suffix);
 
