@@ -1,5 +1,7 @@
 2004-10-11  Nate Nielsen <nielsen@memberwebs.com>
 
+	* libseahorse/seahorse-util.c:
+	* libseahorse/seahorse-util.h: Added URI manipulation functions.
 	* libseahorse/seahorse-vfs-data.c: Truncate files when writing out	
 	* bonobo/seahorse-pgp-file-listener.c:
 	* libseahorse/seahorse-op.c: 
